# GeoPD_badges

./: pyproject.toml
badges/: convert_flags.ipynb  gen_badge.ipynb
